# price_fetcher

./: .gitignore  README.md  commodities.beancount  fetch_price.py  fetch_prices.py  pyproject.toml  store_prices.py  test_stock_fetcher_integration.py  test_store_prices.py  test_validate_prices.py  ticker.py  validate_prices.py
.github/workflows/: fetch-prices.yml  test.yml
prices/: main.beancount
prices/2023/: eudv.beancount  eur.beancount  main.beancount  sppy.beancount  vuaa.beancount  vwce.beancount
prices/2024/: csh.beancount  eudv.beancount  eur.beancount  ko.beancount  main.beancount  mol.beancount  sppy.beancount  strt.beancount  vhyl.beancount  vuaa.beancount  vwce.beancount
prices/2025/: csh.beancount  eudv.beancount  eur.beancount  fwra.beancount  ko.beancount  main.beancount  mol.beancount  nokia.beancount  sppy.beancount  strt.beancount  vhyl.beancount  vuaa.beancount  vwce.beancount
prices/2026/: OTP.beancount  amd.beancount  csh.beancount  eudv.beancount  eur.beancount  fnko.beancount  fwra.beancount  ko.beancount  main.beancount  mol.beancount  nokia.beancount  otp.beancount  sppy.beancount  strt.beancount  usd.beancount  vhyl.beancount  vuaa.beancount  vwce.beancount  webn.beancount
