[tool.poetry]
name = "finance"
version = "0.1.0"
description = ""
authors = ["Kokan <kokaipeter@gmail.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yfinance = "^0.2.51"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[tool.pytest.ini_options]
testpaths = ["."]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
