[tool.poetry]
name = "finance"
version = "0.1.0"
description = "Fetch ticker prices for Beancount-style ledgers."
authors = ["Kokan <kokaipeter@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
yfinance = "^0.2.51"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[tool.pytest.ini_options]
testpaths = ["."]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
