[project]
name = "finance"
version = "0.1.0"
description = "Fetch ticker prices for Beancount-style ledgers."
authors = [{ name = "Kokan", email = "kokaipeter@gmail.com" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = "GPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["yfinance>=0.2.51,<0.3"]

[dependency-groups]
dev = [
    "pytest>=7.0,<8",
    "beancount>=3.2.2,<4",
]

[tool.uv]
package = false
default-groups = "all"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["."]
